--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -18,9 +18,32 @@
         justify-content: space-between;
         align-items: center;
         width:100%;
+        flex-flow:column;
+
+        @media #{$lg-up} {
+            flex-direction: row;
+        }
+
+        .image-wrapper {
+            width:100%;
+            margin-bottom:40px;
+
+            @media #{$lg-up} {
+                width:40%;
+                margin-bottom:0px;
+            }
+
+            img {
+                margin:0 auto;
+            }
+        }
 
         .text {
-            width:57%;
+            width:100%;
+
+            @media #{$lg-up} {
+                width:50%;
+            }
         }
 
         .illustration {
