--- a/css/_portfolio-items.scss
+++ b/css/_portfolio-items.scss
@@ -66,7 +66,12 @@ a.portfolio-item {
         flex-grow:1;
         width:100%;
 
+        @media #{$sm-up} {
+            min-height:229px;
+        }
+
         @media #{$lg-up} {
+            height:auto;
             position:absolute;
             top:0;
             left:0;
