--- a/css/_petcare-app.scss
+++ b/css/_petcare-app.scss
@@ -13,30 +13,55 @@
         }
     }
 
+    .section {
+        position:relative;
+
+        .blue-bg {
+            background-color:#41A8E9;
+            height:0px;
+            width:100%;
+            position:absolute;
+            z-index:4;
+
+            @media #{$md-up} {
+                height:40px;
+                top:46%;
+            }
+
+            @media #{$xl-up} {
+                height:280px;
+                top:38%;
+            }
+        }
+    }
+
     .info .wrapper {
         display:flex;
         align-items: center;
         flex-flow:column wrap;
-        justify-content: space-between;
+        justify-content: space-around;
+        margin-top:50px;
+        z-index:5;
+        position:relative;
 
         @media #{$md-up} {
             flex-flow:row nowrap;
         }
 
         .text {
-            margin-top:30px;
+            margin-bottom:30px;
 
             @media #{$md-up} {
-                width:50%;
+                width:40%;
                 margin-right:8%;
                 order:1;
-                margin-top:0px;
+                margin-bottom:0px;
             }
         }
 
         .photo-wrapper {
             @media #{$md-up} {
-                width:40%;
+                width:50%;
                 order:2;
             }
 
@@ -50,26 +75,32 @@
         display:flex;
         align-items: center;
         flex-flow:column wrap;
-        justify-content: space-between;
-        margin-top:60px;
+        justify-content: space-around;
+        margin:50px;
+        z-index:5;
+        position:relative;
 
         @media #{$md-up} {
             flex-flow:row nowrap;
         }
 
         .text {
-            margin-top:30px;
+            margin-bottom:30px;
 
             @media #{$md-up} {
-                width:60%;
+                width:50%;
                 order:2;
-                margin-top:0px;
+                margin-bottom:0px;
             }
         }
 
         .photo-wrapper {
+            @media #{$sm-up} {
+                width:70%;
+            }
+
             @media #{$md-up} {
-                width:20%;
+                width:30%;
                 order:1;
                 margin-right:8%;
             }
