Fixed layout issues in Firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -395,8 +395,9 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative; }
-  /* line 8, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    position: relative;
+    width: 100%; }
+  /* line 9, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
   .header a.logo {
     vertical-align: middle;
     background-image: url("../img/logo.png");
@@ -406,18 +407,18 @@ p {
     margin-bottom: 10px;
     cursor: pointer; }
     @media (min-width: 768px) {
-      /* line 8, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+      /* line 9, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
       .header a.logo {
         margin-bottom: 0px;
         display: inline-block; } }
-  /* line 23, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+  /* line 24, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
   .header a.menu-btn-mobile {
     display: block;
     position: relative;
     width: 40px;
     height: 30px;
     z-index: 101; }
-    /* line 30, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 31, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header a.menu-btn-mobile span {
       width: 40px;
       height: 4px;
@@ -428,35 +429,35 @@ p {
       transition: 0.2s ease-in-out;
       left: 0px;
       opacity: 1; }
-    /* line 43, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 44, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header a.menu-btn-mobile span:nth-child(1) {
       top: 0px; }
-    /* line 46, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 47, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header a.menu-btn-mobile span:nth-child(2) {
       top: 12px; }
-    /* line 49, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 50, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header a.menu-btn-mobile span:nth-child(3) {
       top: 12px; }
-    /* line 52, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 53, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header a.menu-btn-mobile span:nth-child(4) {
       top: 24px; }
-    /* line 59, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 60, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header a.menu-btn-mobile.open span:nth-child(2) {
       left: 15px;
       opacity: 0; }
-    /* line 63, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 64, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header a.menu-btn-mobile.open span:nth-child(4) {
       top: 16px;
       transform: rotate(135deg); }
-    /* line 67, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 68, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header a.menu-btn-mobile.open span:nth-child(1) {
       top: 16px;
       transform: rotate(-135deg); }
-    /* line 71, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 72, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header a.menu-btn-mobile.open span:nth-child(3) {
       left: -15px;
       opacity: 0; }
-  /* line 79, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+  /* line 80, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
   .header .nav-container {
     background-color: #1c1d21;
     padding: 120px 20px 40px 20px;
@@ -471,13 +472,13 @@ p {
     -moz-transition: opacity .35s ease, visibility .35s ease, height .35s ease;
     transition: opacity .35s ease, visibility .35s ease, height .35s ease;
     visibility: hidden; }
-    /* line 94, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 95, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header .nav-container.open {
       opacity: 0.97;
       visibility: visible;
       height: 100%; }
     @media (min-width: 768px) {
-      /* line 79, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+      /* line 80, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
       .header .nav-container {
         visibility: visible;
         position: relative;
@@ -487,7 +488,7 @@ p {
         display: flex;
         align-items: center;
         justify-content: space-between; } }
-    /* line 111, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 112, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header .nav-container ul.nav {
       text-align: left;
       margin-left: 0px;
@@ -497,29 +498,29 @@ p {
       padding-bottom: 25px;
       border-bottom: 1px solid #fff; }
       @media (min-width: 768px) {
-        /* line 111, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 112, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.nav {
           margin-left: 30px;
           margin-bottom: 0px;
           border-bottom: none;
           padding: 0px;
           width: auto; } }
-      /* line 128, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+      /* line 129, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
       .header .nav-container ul.nav li {
         padding-bottom: 20px;
         display: block; }
-        /* line 132, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 133, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.nav li:last-child {
           padding-bottom: 0px;
           padding-right: 0px; }
         @media (min-width: 768px) {
-          /* line 128, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+          /* line 129, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
           .header .nav-container ul.nav li {
             list-style-type: none;
             display: inline-block;
             padding-bottom: 0px;
             padding-right: 15px; } }
-        /* line 144, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 145, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.nav li a {
           color: #ffffff;
           font-size: 18px;
@@ -530,24 +531,24 @@ p {
           cursor: pointer;
           display: inline-block; }
           @media (min-width: 768px) {
-            /* line 144, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+            /* line 145, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
             .header .nav-container ul.nav li a {
               font-size: 16px; } }
-          /* line 158, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+          /* line 159, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
           .header .nav-container ul.nav li a:hover, .header .nav-container ul.nav li a:focus, .header .nav-container ul.nav li a.active {
             color: #f26414; }
             @media (min-width: 768px) {
-              /* line 158, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+              /* line 159, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
               .header .nav-container ul.nav li a:hover, .header .nav-container ul.nav li a:focus, .header .nav-container ul.nav li a.active {
                 color: #ffffff; } }
           @media (min-width: 768px) {
-            /* line 168, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+            /* line 169, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
             .header .nav-container ul.nav li a.active:after {
               height: 3px;
               width: 100%;
               background: #f26414; } }
           @media (min-width: 768px) {
-            /* line 177, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+            /* line 178, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
             .header .nav-container ul.nav li a:after {
               content: '';
               display: block;
@@ -558,65 +559,65 @@ p {
               -moz-transition: width .3s ease, background-color .3s ease;
               transition: width .3s ease, background-color .3s ease;
               margin-top: 4px; }
-            /* line 189, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+            /* line 190, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
             .header .nav-container ul.nav li a:hover:after, .header .nav-container ul.nav li a:focus:after {
               width: 100%;
               background: #f26414; } }
-    /* line 198, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+    /* line 199, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
     .header .nav-container ul.social-media {
       text-align: left;
       width: 100%; }
       @media (min-width: 768px) {
-        /* line 198, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 199, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.social-media {
           text-align: right;
           width: auto; } }
-      /* line 207, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+      /* line 208, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
       .header .nav-container ul.social-media li {
         display: inline-block;
         margin-right: 15px; }
         @media (min-width: 768px) {
-          /* line 207, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+          /* line 208, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
           .header .nav-container ul.social-media li {
             margin-right: 0px; } }
-        /* line 215, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 216, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.social-media li:last-child {
           margin-right: 0px; }
-        /* line 219, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 220, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.social-media li a.behance, .header .nav-container ul.social-media li a.linkedin, .header .nav-container ul.social-media li a.vimeo, .header .nav-container ul.social-media li a.youtube {
           height: 26px;
           display: inline-block;
           background-image: url("../img/social-media-icons-white.png");
           background-repeat: no-repeat;
           cursor: pointer; }
-        /* line 227, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 228, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.social-media li a.behance {
           background-position: 0px -0px;
           margin-right: 5px;
           width: 41px; }
           @media (min-width: 768px) {
-            /* line 227, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+            /* line 228, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
             .header .nav-container ul.social-media li a.behance {
               margin-right: 10px; } }
-        /* line 237, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 238, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.social-media li a.linkedin {
           background-position: -57px -0px;
           margin-right: 5px;
           width: 29px; }
           @media (min-width: 768px) {
-            /* line 237, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+            /* line 238, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
             .header .nav-container ul.social-media li a.linkedin {
               margin-right: 10px; } }
-        /* line 247, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 248, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.social-media li a.vimeo {
           background-position: -101px -0px;
           margin-right: 5px;
           width: 31px; }
           @media (min-width: 768px) {
-            /* line 247, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+            /* line 248, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
             .header .nav-container ul.social-media li a.vimeo {
               margin-right: 10px; } }
-        /* line 257, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
+        /* line 258, /Users/Amanda/self_promotion_material/branding/portfolio-github/css/_nav.scss */
         .header .nav-container ul.social-media li a.youtube {
           background-position: -143px -0px;
           width: 38px; }
