--- a/css/_common.scss
+++ b/css/_common.scss
@@ -82,22 +82,22 @@ body {
 }
 
 /*Responsive video*/
-//.video-wrapper {
-//    position: relative;
-//    padding-bottom: 56.25%; /* 16:9 */
-//    padding-top: 25px;
-//    height: 0;
-//
-//    iframe {
-//        position: absolute;
-//        top: 0;
-//        left: 0;
-//        right: 0;
-//        width: 70%;
-//        height: 70%;
-//        margin: 0 auto;
-//    }
-//}
+.video-wrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 70%;
+        height: 70%;
+        margin: 0 auto;
+    }
+}
 
 .video-wrapper {
     width:100%;
